css/style.css
*{
  margin: 0;
}

body {
  //background: #0a2a5e;

}

.container {
  width: 100%;
  //max-width: 960px;
  margin: 0 auto;
}

/*----- Nav Menu Styles -----*/

nav {
  background:  #333;
  border-radius: 5px;
  margin: 1px;
}

nav ul {
  list-style-type: none;
}

nav a {
  text-decoration: none;
  text-align: center;
  color: #fff;
  display: block;
  padding: 10px;
}

nav a:hover {
  background-color:  #555;
}

/*----- Nav parent ------*/

.parent {
  //background-color: blue;
  display: flex;
  align-items: center;
  margin-top: 20px;
  margin-left: 40px;
  margin-right: 40px;
}

.left {
  //margin-left: 40px;
  //margin-right: 10px;
}

.right {
  //margin-left: 10px;
  //margin-right: 40px;

}



/*----- Media Styles -----*/

.facebook {
  background: url("img/facebook.png") no-repeat center;
  background-size: 80%;
}



/*----- Nav Flex Styles -----*/


@media screen and (min-width: 768px) {

  nav ul {
    display:flex;
    justify-content: flex-start;
    align-self: flex-end;
  }

  nav li {
    flex: 1 1 0;
  }

  nav {
    display: flex;
    justify-content: space-between;
  }

  .parent {
    flex-wrap: wrap;
  }

}

